--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -145,8 +145,12 @@ img {
   margin: 0 auto;
   max-width: 650px;
   padding: 5px;
-  margin: 10px 0 32px 0;
-  border: 1px solid #ccc;
+}
+
+img.profilePic {
+ 	background-color: #FFFFFF;    
+    box-shadow: 0 0 5px #FFFFFF;
+    padding: 1px;
 }
 
 
@@ -207,7 +211,7 @@ td {
 header {
 	background-color: #171717;
 	color: #FDFDFB;
-  width:170px;
+  width:240px;
   float:left;
   position:fixed;
 	border: 1px solid #000;
@@ -217,7 +221,7 @@ header {
 	-moz-border-radius-bottomright: 4px;
 	border-top-right-radius: 4px;
 	border-bottom-right-radius: 4px;
-	padding: 34px 25px 22px 50px;
+	padding: 34px 25px 22px 18px;
 	margin: 30px 25px 0 0;
 	-webkit-font-smoothing: antialiased;
 }
@@ -251,6 +255,7 @@ a.name {
 header ul {
   list-style:none;
   padding:0;
+  margin-left:40px;
 }
 
 header li {
